style/style.css
body {
    padding: 0px;
    margin: 0px;
}

@font-face {
    font-family: Miracode;
    src: url("/assets/MiracodeNerdFont-Regular.ttf");
}

@font-face {
    font-family: Firacode;
    src: url("/assets/FiraCodeNerdFont-Regular.ttf");
}

/*Body*/
body .content {
    box-sizing: border-box;
    /* position:fixed; */
    vertical-align: top;
    display: inline-block;

    width: 100%;
    height: 100%;

    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    margin: 0px;
    padding-top: 50px;
    z-index: 1;

    /* text-align: center; */
    font-family: Miracode, sans-serif;
}

.article-header {
    height: min-content;
    background-color: #292d3e;
    border-radius: 15px 15px 0px 0px;
    border-bottom: 2px solid #f4bd29;
    padding-bottom: 0px;
}

.article-header img {
    display: inline-block;
    clip-path: circle(50%);
    vertical-align: middle;
    margin-left: 8px;
}

.article-header p {
    display: inline-block;
    font-family: Miracode;
}


.article h1 {
    color: #cad3f5;
    font-family: Miracode;
    font-size: 18px;
    margin:8px;
}

.article-header h1 {
    display: inline-block;
    font-family: Miracode;
    font-size: 16px;
    margin: 8px;
    color: #cad3f5;
}

.article-header-tab {
    width: max(min-content, 400px);
    min-width: 7em;
    margin-left: 10px;
    margin-top: 10px;
    box-sizing: border-box;
    padding: 1px;
    border-radius: 10px 10px 0px 0px;
    /* background-color: #292d3e; */
    background-color: #c48d00;
    border: 2px solid #f4bd29;
    border-bottom: 0px;
    display: inline-block;
}

.article {
    box-sizing: border-box;
    display: inline-block;
    width: 35vw;
    padding: 0px;
    background-color: #292d3ee3;
    border-radius: 25px;
    padding: 20px;
    text-align: left;
    margin: 2vw;
    vertical-align: top;
    white-space: normal;
}

.hori-scroll {
    white-space: nowrap;
    overflow-x: overlay;
    min-height:max-content;
}

.hori-scroll::webkit-scrollbar {
    position: fixed;
}

.article-content {
    padding: 15px;
    margin-top: 0px;
    background-color: #292d3e;
    border-radius: 0px 0px 15px 15px;
    height: min-content;
    font-family: Firacode;
}

.article-content img {
    max-width: 19vw;
    border-radius: 10px;
    margin: 0px 5px
}

.article p {
    color: #cad3f5;
    margin: 8px;
}

.article a {
    color: #f4bd29;
    text-decoration: none;
}

.article input {
    border-radius: 8px;
    background-color: #ab0936;
    /* border-color: #cb2956; */
    border: #cb2956 2px solid;
    font-family:FiraCode;
    margin:4px;
}

.article input::placeholder {
    font-family: Firacode;
}

.article code {
    background-color: #1e2030;
    border-radius: 5px;
    padding:4px;
}

.note {
    color: #aab3d5;
    font-size: 14px;
    margin: 4px 0px;
}

.note a {
    color: #c48d00;
    font-size: 14px;
    margin: 4px 0px;
}

.article hr {
    color: #f4bd29;
}

.article ul {
    padding-left:0px
}

.article li {
    color: #cad3f5;
    margin: 8px;
    list-style-type:none;
}

.article li:before {
    content:"- "
}

.article li.li-1 {
    color:#cb2956;
}

.article li.li-1:before {
    content: ""
}

.article li.li-2 {
    color:#ea8526;
}

.article li.li-2:before {
    content: ""
}

.article li.li-3 {
    color:#f4bd29;
}

.article li.li-3:before {
    content: ""
}

.article li.li-4 {
    color:#991c8d;
}

.article li.li-4:before {
    content: ""
}

.action-dot {
    width: 18px;
    height: 18px;
    border-radius: 50%;
    margin-right: 20px;
    margin-top: 20px;
    float: right;
}

.vl {
    height: 60vh;
    width:5px;
    margin: 20px 0px;
    border-radius: 15px;
    display:inline-block;
    box-sizing: border-box;
    background-color:#c4ad09;
}

/* Header */
vl {
    background-color: #292d3e;
    display: inline-block;
    width: 2px;
    height: auto;
}

#feed-container {
    /* background-color:#ff0000; */
    display: inline-grid;
    grid-template-columns: repeat(auto-fill, min(25vw, 500px));
    padding-top: 75px;
}

#header {
    background-color: #fe3f7cc9;
    display: flex;
    box-sizing: border-box;
    border-radius: 0px 0px 15px 15px;
    align-content: center;
    align-items: center;

    backdrop-filter: blur(10px);

    padding-left: 15px;

    position: fixed;
    height: 48px;
    width: 99%;
    top: 0;
    left: 0;

    margin-left: 0.5%;
    margin-right: 0.5%;

    z-index: 9999999;
    font-family: Miracode, sans-serif;
}

#header vl {
    height: 22px;
}

#header p {
    display: inline-block;
    margin: 5px 10px;
    color: #200744;
}

#page-tags {
    display: inline-block;
    margin: 3px 5px;
}

.page-tag {
    display: inline-block;
    margin: 5px 7px;
    padding: 5px;
    border-radius: 10px;
}

#motd,
#motd p {
    display: inline-block;
    margin: 5px 10px;
    color: #20074480;
}

/* Footer */
#footer {
    background-color: #fe3f7cc9;
    display: flex;
    box-sizing: border-box;
    border-radius: 15px 15px 15px 15px;
    align-content: center;
    align-items: center;

    backdrop-filter: blur(10px);

    position: fixed;
    height: 40px;
    /* width:100%; */
    bottom: 0;
    left: 0;

    padding-left: 10px;
    padding-top: 0px;
    padding-bottom: 5px;

    margin-left: 5px;
    margin-bottom: 5px;

    z-index: 9999999;
    font-family: Miracode, sans-serif;

    transition: width .25s;
    width: calc(auto, size);
}

#footer vl {
    display: inline-block;
    height: 20px;
    margin-top: 8px;
}

#footer p {
    display: inline-block;
    margin: 5px;
}

#footer a {
    color: #200744;
    text-decoration: none;
    margin: 5px;
}

#footer a.active {
    color: #f4bd29;
    text-decoration: none;
    margin: 5px;
}

.collapsable {
    display: inline-block;
    width:100%;
}
.collapsable hr {
    display:inline-block;
    width:90%;
}

.collapsable-content {
    background-color: #1e2030;
    border-radius:10px;
    padding:10px;
}

button.footer-toggle {
    display: inline-block;
    margin-left: 2px;
    margin-top: 10px;
    margin-right: 10px;
    color: #200744;
    cursor: pointer;
    background-color: #00000000;
    border: none;
}

button.collapsible {
    display: inline-block;
    margin: 7px;
    color: #f4bd29;
    cursor: pointer;
    background-color: #00000000;
    border: none;

    font-family:Miracode;
    font-size:14px;
}

/* Background */
.background-image {
    background-image: url('/assets/day.png');
    background-repeat: no-repeat;
    background-attachment: scroll;
    background-size: cover;
    background-position-x: center;

    filter: blur(2px);

    position: fixed;
    display: block;

    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    margin: -2.5px;
    z-index: -1;
}

